--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Personal portfolio website design</title>
+	<title>Sheikh Abdullah Sharif</title>
 	<!---custom css link--->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
@@ -37,7 +37,7 @@
 			<h4>Hello</h4>
 			<h1>I'M Sheikh <br> <span>Abdullah</span> <br> Sharif</h1>
 			<h3>Full Stack Developer</h3>
-			<a href="#" class="btn">Hire Me</a>
+			<a href="mailto:abdullah.25.sharif@gmail.com" class="btn">Hire Me</a>
 		</div>
 	</section>
 
@@ -69,7 +69,7 @@
 				</div>
 
 			</div>
-			<a href="#" class="btn">Contact Me</a>
+			<a href="mailto:abdullah.25.sharif@gmail.com" class="btn">Contact Me</a>
 		</div>
 	</section>
 
@@ -156,7 +156,7 @@
 			
 			<div class="contact-list">
 				<li><a href="#">Islamabad, Pakistan</a></li>
-				<li><a href="#">abdullah.25.sharif@gmail.com</a></li>
+				<li><a href="mailto:abdullah.25.sharif@gmail.com">abdullah.25.sharif@gmail.com</a></li>
 			
 			</div>
 			<!-- <div class="contact-icons">
